<resources>
    <string name="app_name">FamilyMapClient</string>
    <string name="server_host">Server Host:</string>
    <string name="server_port">Server Port:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="click_on_a_marker_to_see_event_details">Click on a marker to see event details</string>
    <string name="map_text_icon">map text icon</string>
    <string name="first_name_no_colon">First Name</string>
    <string name="last_name_no_colon">Last Name</string>
    <string name="gender_no_colon">Gender</string>
    <string name="unknown">N/A</string>
    <string name="life_events">Life Events</string>
    <string name="family">Family</string>
    <string name="gender_image">gender image</string>
    <string name="location_image">location image</string>
    <string name="searchMenu">Search Menu</string>
    <string name="settingsMenu">Settings Menu</string>
</resources>