<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userinterface.activities.PersonActivity"
    android:orientation="vertical"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/firstNamePersonActivity"
            android:text="@string/unknown"
            android:textStyle="bold"
            android:textSize="18sp">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name_no_colon">
        </TextView>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="@android:color/darker_gray">
    </View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lastNamePersonActivity"
            android:text="@string/unknown"
            android:textStyle="bold"
            android:textSize="18sp">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name_no_colon">
        </TextView>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="@android:color/darker_gray">
    </View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/genderPersonActivity"
            android:text="@string/unknown"
            android:textStyle="bold"
            android:textSize="18sp">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_no_colon">
        </TextView>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="@android:color/darker_gray">
    </View>
    <ExpandableListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/expandableListView"
        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
        android:divider="@android:color/darker_gray"
        android:dividerHeight=".5dp">
    </ExpandableListView>


</LinearLayout>